# tree-sitter-rockstar

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-rockstar.pc.in
bindings/c/tree_sitter/: tree-sitter-rockstar.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_rockstar/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRockstarTests/: TreeSitterRockstarTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: 02_types_and_values.txt  03_variables.txt  getting_started.txt
